WrapperClass 코드 수정