@@ -2,8 +2,8 @@ package study.WrapperClass;
 
 public class WrapperEx1 {
     public static void main(String[] args) {
-        Integer i = new Integer(100);
-        Integer i2 = new Integer(100);
+        Integer i = Integer.valueOf(100);
+        Integer i2 = Integer.valueOf(100);
 
         System.out.println("i==i2 ? "+(i==i2));
         System.out.println("i.equals(i2) ? "+i.equals(i2));
